agent enhancement WIP and mongodb save added
